--- a/build.gradle
+++ b/build.gradle
@@ -10,13 +10,13 @@ buildscript {
 }
 
 plugins {
-    id 'com.github.johnrengelman.shadow' version '2.0.1'
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
 }
 
 apply plugin: 'net.minecraftforge.gradle'
 
 group = 'net.kunmc.lab'
-version = '1.0-SNAPSHOT'
+version = '1.1-1.16.5-SNAPSHOT'
 archivesBaseName = 'vplayer'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(8) // Mojang ships Java 8 to end users, so your mod should target Java 8.
